// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon Component Renders with a given icon name and custom color and matches previous snapshot:  1`] = `
<View
  style={
    [
      {
        "height": 20,
        "overflow": "hidden",
        "width": 12,
      },
      undefined,
    ]
  }
>
  <RNSVGSvgView
    align="xMidYMid"
    bbHeight="20"
    bbWidth="12"
    fill="none"
    focusable={false}
    height={20}
    meetOrSlice={0}
    minX={0}
    minY={0}
    style={
      [
        {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        {
          "left": undefined,
          "top": undefined,
        },
        {
          "flex": 0,
          "height": 20,
          "width": 12,
        },
      ]
    }
    vbHeight={20}
    vbWidth={12}
    width={12}
  >
    <RNSVGGroup
      fill={null}
      propList={
        [
          "fill",
        ]
      }
    >
      <RNSVGPath
        d="M0.289062 10.2441C0.296224 10.0221 0.339193 9.81803 0.417969 9.63184C0.503906 9.44564 0.632812 9.2666 0.804688 9.09473L9.07617 1.00586C9.34831 0.733724 9.68132 0.597656 10.0752 0.597656C10.3473 0.597656 10.5908 0.662109 10.8057 0.791016C11.0277 0.919922 11.2031 1.09538 11.332 1.31738C11.4681 1.53223 11.5361 1.77214 11.5361 2.03711C11.5361 2.43815 11.3857 2.78906 11.085 3.08984L3.72656 10.2441L11.085 17.3984C11.3857 17.7064 11.5361 18.0573 11.5361 18.4512C11.5361 18.7233 11.4681 18.9668 11.332 19.1816C11.2031 19.3965 11.0277 19.5684 10.8057 19.6973C10.5908 19.8262 10.3473 19.8906 10.0752 19.8906C9.68132 19.8906 9.34831 19.7546 9.07617 19.4824L0.804688 11.3936C0.625651 11.2217 0.493164 11.0426 0.407227 10.8564C0.328451 10.6631 0.289062 10.459 0.289062 10.2441Z"
        fill={
          {
            "payload": 4294916139,
            "type": 0,
          }
        }
        propList={
          [
            "fill",
          ]
        }
      />
      <RNSVGPath
        fill={
          {
            "payload": 4294916139,
            "type": 0,
          }
        }
        fillRule={0}
        propList={
          [
            "fill",
            "fillRule",
          ]
        }
      />
    </RNSVGGroup>
  </RNSVGSvgView>
</View>
`;

exports[`Icon Component Renders with a given icon name and default color and matches previous snapshot:  1`] = `
<View
  style={
    [
      {
        "height": 20,
        "overflow": "hidden",
        "width": 12,
      },
      undefined,
    ]
  }
>
  <RNSVGSvgView
    align="xMidYMid"
    bbHeight="20"
    bbWidth="12"
    fill="none"
    focusable={false}
    height={20}
    meetOrSlice={0}
    minX={0}
    minY={0}
    style={
      [
        {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        {
          "left": undefined,
          "top": undefined,
        },
        {
          "flex": 0,
          "height": 20,
          "width": 12,
        },
      ]
    }
    vbHeight={20}
    vbWidth={12}
    width={12}
  >
    <RNSVGGroup
      fill={null}
      propList={
        [
          "fill",
        ]
      }
    >
      <RNSVGPath
        d="M0.289062 10.2441C0.296224 10.0221 0.339193 9.81803 0.417969 9.63184C0.503906 9.44564 0.632812 9.2666 0.804688 9.09473L9.07617 1.00586C9.34831 0.733724 9.68132 0.597656 10.0752 0.597656C10.3473 0.597656 10.5908 0.662109 10.8057 0.791016C11.0277 0.919922 11.2031 1.09538 11.332 1.31738C11.4681 1.53223 11.5361 1.77214 11.5361 2.03711C11.5361 2.43815 11.3857 2.78906 11.085 3.08984L3.72656 10.2441L11.085 17.3984C11.3857 17.7064 11.5361 18.0573 11.5361 18.4512C11.5361 18.7233 11.4681 18.9668 11.332 19.1816C11.2031 19.3965 11.0277 19.5684 10.8057 19.6973C10.5908 19.8262 10.3473 19.8906 10.0752 19.8906C9.68132 19.8906 9.34831 19.7546 9.07617 19.4824L0.804688 11.3936C0.625651 11.2217 0.493164 11.0426 0.407227 10.8564C0.328451 10.6631 0.289062 10.459 0.289062 10.2441Z"
        fill={
          {
            "payload": 4294916139,
            "type": 0,
          }
        }
        propList={
          [
            "fill",
          ]
        }
      />
      <RNSVGPath
        fill={
          {
            "payload": 4294916139,
            "type": 0,
          }
        }
        fillRule={0}
        propList={
          [
            "fill",
            "fillRule",
          ]
        }
      />
    </RNSVGGroup>
  </RNSVGSvgView>
</View>
`;

exports[`Icon Component Renders with additional container style and matches previous snapshot:  1`] = `
<View
  style={
    [
      {
        "height": 24,
        "overflow": "hidden",
        "width": 24,
      },
      {
        "margin": 10,
      },
    ]
  }
>
  <RNSVGSvgView
    align="xMidYMid"
    bbHeight="24"
    bbWidth="24"
    fill="none"
    focusable={false}
    height={24}
    meetOrSlice={0}
    minX={0}
    minY={0}
    style={
      [
        {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        {
          "left": undefined,
          "top": undefined,
        },
        {
          "flex": 0,
          "height": 24,
          "width": 24,
        },
      ]
    }
    vbHeight={24}
    vbWidth={24}
    width={24}
  >
    <RNSVGGroup
      fill={null}
      propList={
        [
          "fill",
        ]
      }
    >
      <RNSVGPath
        d="M16.5 9.5C16.8905 9.89053 16.8905 10.5237 16.5 10.9142L11.7071 15.7071C11.3166 16.0976 10.6834 16.0976 10.2929 15.7071L8 13.4142C7.60948 13.0237 7.60948 12.3905 8 12C8.39053 11.6095 9.02369 11.6095 9.41422 12L11 13.5858L15.0858 9.5C15.1346 9.45119 15.1872 9.40847 15.2427 9.37186C15.6308 9.11558 16.1583 9.15829 16.5 9.5Z"
        fill={
          {
            "payload": 4287532691,
            "type": 0,
          }
        }
        propList={
          [
            "fill",
          ]
        }
      />
      <RNSVGPath
        d="M4 5H6V3.75C6 3.19771 6.44772 2.75 7 2.75C7.55229 2.75 8 3.19771 8 3.75V5H16V3.75C16 3.19771 16.4477 2.75 17 2.75C17.5523 2.75 18 3.19771 18 3.75V5H20C21.1046 5 22 5.89543 22 7V19C22 20.1046 21.1046 21 20 21H4C2.89543 21 2 20.1046 2 19V7C2 5.89543 2.89543 5 4 5ZM4 19V7H20V19H4Z"
        fill={
          {
            "payload": 4287532691,
            "type": 0,
          }
        }
        fillRule={0}
        propList={
          [
            "fill",
            "fillRule",
          ]
        }
      />
    </RNSVGGroup>
  </RNSVGSvgView>
</View>
`;
